# larutils

./: CMakeLists.txt  CMakePresets.json  README.md
buildScripts/: build-lar-products.sh  build-larbase.sh  build-larbatch.sh  build-larsoft-with-spack.sh  build-larsoft.sh  build-larsoftobj.sh  buildLArIAT.sh  buildSBN.sh  buildSBNANA.sh  buildSBNDQM.sh
ups/: product_deps
